--- a/common-auth/pom.xml
+++ b/common-auth/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>hadoop-minikdc</artifactId>
             <version>2.7.3</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.directory.jdbm</groupId>
+                    <artifactId>apacheds-jdbm1</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
