backporting 77932b984c32f05cf17957ee0c54b185b302659d

--- a/common-auth/pom.xml
+++ b/common-auth/pom.xml
@@ -40,6 +40,10 @@
                     <groupId>net.sf.ehcache</groupId>
                     <artifactId>ehcache-core</artifactId>
                 </exclusion>
+<!--                 <exclusion>
+                    <groupId>org.apache.directory.jdbm</groupId>
+                    <artifactId>apacheds-jdbm1</artifactId>
+                </exclusion> -->
             </exclusions>
         </dependency>
         <dependency>
